- Updated dependencies - Added icon.svg - Disabled failing tests in aoc-2023 - Removed non-used methods